[gd_scene load_steps=9 format=3 uid="uid://kxakcow1x4vt"]

[ext_resource type="Texture2D" uid="uid://ceqnt0xbs5jox" path="res://images/Buttoning/menu_active.png" id="1_ctjbp"]
[ext_resource type="Texture2D" uid="uid://b46vof5h7qr1c" path="res://images/Buttoning/menu_selected.png" id="2_dg1kc"]
[ext_resource type="Texture2D" uid="uid://bwnlv8w2tko0t" path="res://images/Buttoning/menu_hover.png" id="3_sh2ie"]
[ext_resource type="Texture2D" uid="uid://cypwoxd6msrp1" path="res://images/Buttoning/menudowns.png" id="4_ibakv"]
[ext_resource type="Script" path="res://unique_scripts/reincarnate.gd" id="5_a5sr2"]
[ext_resource type="Texture2D" uid="uid://cv6rodf5pranh" path="res://images/bmenuicons/ascend.png" id="6_4l60x"]
[ext_resource type="Texture2D" uid="uid://dqlx8yfvmltdr" path="res://images/Buttoning/submenu_title.png" id="8_i1jvw"]
[ext_resource type="AudioStream" uid="uid://cedcmjmiii7px" path="res://Audio/MenuTap.ogg" id="8_uo02f"]

[node name="restarto" type="TextureButton"]
z_index = -1
custom_minimum_size = Vector2(225, 156)
offset_right = 225.0
offset_bottom = 156.0
texture_normal = ExtResource("1_ctjbp")
texture_pressed = ExtResource("2_dg1kc")
texture_hover = ExtResource("3_sh2ie")
texture_disabled = ExtResource("4_ibakv")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_a5sr2")

[node name="Sprite2D" type="TextureRect" parent="."]
custom_minimum_size = Vector2(203, 127)
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 208.0
offset_bottom = 130.0
texture = ExtResource("6_4l60x")
expand_mode = 1

[node name="heade" type="TextureRect" parent="."]
custom_minimum_size = Vector2(213, 37)
layout_mode = 0
offset_left = 6.0
offset_top = 114.0
offset_right = 219.0
offset_bottom = 151.0
texture = ExtResource("8_i1jvw")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_top = -40.0
offset_right = 55.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "ascend"
horizontal_alignment = 1
uppercase = true

[node name="Tap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_uo02f")
pitch_scale = 2.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
